<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_filter_ros</name>
  <version>0.0.0</version>
  <description>The pointcloud_filter_ros package</description>

  <maintainer email="mpheng96@gmail.com">Heng Meng Pei</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
